force-app/main/default/objects/Hosting_Detail__c/Hosting_Detail__c.object-meta.xml
<CustomObject>
    <description>Created by: RE</description>
    <label>Hosting Detail</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Hosting Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hosting Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>