force-app/main/default/objects/Hosting_Detail__c/fields/Catolog_Item__c.field-meta.xml
<CustomField>
    <fullName>Catolog_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created by: RE</description>
    <label>Catalog Item</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Catalog Item must be of Type: Hosting Details</errorMessage>
        <filterItems>
            <field>Catalog_Item__c.Type__c</field>
            <operation>equals</operation>
            <value>Hosting Detail</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Catalog_Item__c</referenceTo>
    <relationshipLabel>Hosting Details</relationshipLabel>
    <relationshipName>Hosting_Details</relationshipName>
    <type>Lookup</type>
</CustomField>