force-app/main/default/objects/Hosting_Detail__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created by: RE</description>
    <label>Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Opportunity Record Type must be Shift3.</errorMessage>
        <filterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>BWTC</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Hosting Details</relationshipLabel>
    <relationshipName>Hosting_Details</relationshipName>
    <type>Lookup</type>
</CustomField>