force-app/main/default/objects/Hosting_Detail__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <description>Created by: RE</description>
    <label>Scope</label>
    <referenceTo>Scope__c</referenceTo>
    <relationshipLabel>Hosting Details</relationshipLabel>
    <relationshipName>Hosting_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>