force-app/main/default/objects/Hosting_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Code__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>Hosting Details - All</label>
</ListView>